# chatwoot-messenger-gateway

./: .dockerignore  .env_template  .gitignore  Dockerfile  ENV_VARIABLES.md  README.md  README_DISPATCH.md  pyproject.toml  session.session
app/: config.py  main.py
app/application/: chatwoot_service.py  events.py  router.py
app/delivery/: http.py
app/domain/: message.py
app/infra/: chatwoot_client.py
app/infra/adapters/: telegram_telethon.py
scripts/: export_session_base64.py  login_telegram.py
